--- a/StareMedic/Views/Habitaciones.xaml
+++ b/StareMedic/Views/Habitaciones.xaml
@@ -31,40 +31,57 @@
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
-                        <StackLayout Orientation="Horizontal">
+                        <Frame
+                            Margin="10"
+                            Padding="13"
+                            HeightRequest="75"
+                            CornerRadius="25"
+                            BorderColor="{StaticResource Alter2}"
+                            HasShadow="True"
+                            BackgroundColor="{StaticResource Secundario}">
 
-                            <Grid Padding="20">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="*"/>
-                                </Grid.ColumnDefinitions>
 
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="Auto" />
-                                    <RowDefinition Height="Auto" />
-                                </Grid.RowDefinitions>
+                                <StackLayout
+                                    Orientation="Vertical"
+                                    Padding="0,0,20,0">
 
-                                <Label
-                                    Grid.Column="0"
-                                    Grid.Row="0"
-                                    Text="{Binding Path=Id, StringFormat='ID: {0} '}"
-                                    TextColor="{StaticResource Alter2}"
-                                    FontFamily="OpenSansRegular"
-                                    FontSize="15"
-                                    HorizontalTextAlignment="Start"
-                                    HorizontalOptions="Start"/>
 
-                                <Label
-                                    Grid.Column="0"
-                                    Grid.Row="1"
-                                    Text="{Binding Nombre, StringFormat='Nombre: {0} '}"
-                                    TextColor="{StaticResource Black}"
-                                    FontFamily="OpenSansRegular"
-                                    FontSize="15"
-                                    HorizontalOptions="Start"
-                                    HorizontalTextAlignment="Center"/>
-                            </Grid>
-                        </StackLayout>
+                                    <Label
+                                        Grid.Column="0"
+                                        Grid.Row="0"
+                                        Text="{Binding Path=Id, StringFormat='ID: {0} '}"
+                                        TextColor="{StaticResource Alter2}"
+                                        FontFamily="OpenSansRegular"
+                                        FontSize="15"
+                                        HorizontalTextAlignment="Start"
+                                        HorizontalOptions="Start"/>
+
+                                    <Label
+                                        Grid.Column="0"
+                                        Grid.Row="1"
+                                        Text="{Binding Nombre, StringFormat='Nombre: {0} '}"
+                                        TextColor="{StaticResource Black}"
+                                        FontFamily="OpenSansRegular"
+                                        FontSize="15"
+                                        HorizontalOptions="Start"
+                                        HorizontalTextAlignment="Center"/>
+
+                                </StackLayout>
+
+                            <VisualStateManager.VisualStateGroups>
+                                <VisualStateGroupList>
+                                    <VisualStateGroup x:Name="CommonStates">
+                                        <VisualState x:Name="Normal" />
+                                        <VisualState x:Name="PointerOver">
+                                            <VisualState.Setters>
+                                                <Setter Property="BackgroundColor" Value="LightGray" />
+                                            </VisualState.Setters>
+                                        </VisualState>
+                                    </VisualStateGroup>
+                                </VisualStateGroupList>
+                            </VisualStateManager.VisualStateGroups>
+
+                        </Frame>
                     </ViewCell>
                 </DataTemplate>
             </ListView.ItemTemplate>
