--- a/StareMedic/App.xaml
+++ b/StareMedic/App.xaml
@@ -130,6 +130,12 @@
                 <Setter Property="SeparatorColor" Value="Purple"/>
                 <Setter Property="RowHeight" Value="85"/>
             </Style>
+
+            <Style x:Key="listviewShowEntityAC" TargetType="ListView">
+                <Setter Property="BackgroundColor" Value="Transparent"/>
+                <Setter Property="RowHeight" Value="115"/>
+            </Style>
+
             <Style x:Key="listViewPacientes" TargetType="ListView">
                 <Setter Property="SeparatorColor" Value="Purple"/>
             </Style>
